2014-2-4:
 * Updated vignette format.
 * Fixed author affiliation in vignette.

2014-1-30:
 * Added sparse dsmatrix and weaker dmat classes.
 * Added basic sparse BLAS support.

2014-1-23:
 * Linked with SEXPtools.
 * Rewrote internals to use SEXPtools.

2014-1-21
 * Some minor constructor bugfixes.
 * Fixed minor CRAN check issues.

2014-1-14:
  * Vignetted copyright updated.

pbdDMAT 0.2-3 (2013-12-14) --------------------------------------------------

2013-11-4: 
  * Added matrix exponentiation.

2013-10-24:
  * as.vector() and as.matrix() bugfix for unusual proc.dest values.

2013-10-22:
  * Added method for constructing distributed Hilbert matrices.

2013-9-30:
  * Improved manual.

2013-8-20:
  * Added experimental eigen2() method.

2013-7-20:
  * Fixed eigen() bug.

2013-7-18:
  * Fixed isSymmetric bug.

pbdDMAT 0.2-2 (2013-7-8) --------------------------------------------------

2013-7-2:
  * Several qr()/qr.Q() bugs fixed.

2013-5-30:
  * Added rowMin(), colMin(), rowMax(), and colMax() methods.
  * Added as.block(), as.rowblock(), as.colblock(), as.rowcyclic(), 
    as.colcyclic(), and as.blockcyclic() redistribution methods.

2013-5-24:
  * Added experimental ddvector class.

pbdDMAT 0.2-1 (2013-3-25) --------------------------------------------------

2013-3-20:
  * Added eigen() method.
  * Attributes bugfix when subsetting.

pbdDMAT 0.2-0 (2013-3-12) --------------------------------------------------

2013-3-12:
  * Final touches for CRAN.

2012-02-26:
  * Added method for 'cor' (pearson only).
  * Significantly expanded method "ddmatrix".

2012-02-15:
  * Completely redid all the internals to accommodate corresponding pbdBASE changes.

2012-01-04:
  * Added norm(), rcond(), and kappa() methods.
  * Added new diag() method for constructing diagonal ddmatrices.

2012-12-17:
  * Added copyright to vignette.

pbdDMAT 0.1-1 (2012-12-1) ----------------------------------------------------

2012-11-29:
  * Added simple var() and sd() wrappers for ddmatrix.