@@ -1,0 +1,7 @@
+*.o
+*.mod
+*.so
+*.log
+*.status
+*~
+*.swp
